--- a/AndroidProject/app/src/main/res/drawable/ic_route.xml
+++ b/AndroidProject/app/src/main/res/drawable/ic_route.xml
@@ -1,11 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#2980FF"
-    android:alpha="0.8">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M21.71,11.29l-9,-9c-0.39,-0.39 -1.02,-0.39 -1.41,0l-9,9c-0.39,0.39 -0.39,1.02 0,1.41l9,9c0.39,0.39 1.02,0.39 1.41,0l9,-9c0.39,-0.38 0.39,-1.01 0,-1.41zM14,14.5V12h-4v3H8v-4c0,-0.55 0.45,-1 1,-1h5V7.5l3.5,3.5 -3.5,3.5z"/>
+<vector android:autoMirrored="true" android:height="24dp"
+    android:tint="#142C53" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M14,10L9,10c-0.6,0 -1,0.4 -1,1v4h2v-3h4v2.5l3.5,-3.5L14,7.5L14,10zM12,1C5.9,1 1,5.9 1,12s4.9,11 11,11 11,-4.9 11,-11S18.1,1 12,1zM19.73,12.58l-7.19,7.22c-0.35,0.27 -0.79,0.27 -1.15,0L4.2,12.58c-0.27,-0.36 -0.27,-0.8 0,-1.16l7.19,-7.22c0.35,-0.27 0.79,-0.27 1.15,0l7.19,7.22c0.36,0.27 0.36,0.8 0,1.16z"/>
 </vector>
