--- a/AndroidProject/app/src/main/res/layout/acceuil.xml
+++ b/AndroidProject/app/src/main/res/layout/acceuil.xml
@@ -2,81 +2,93 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/page_accueil"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Acceuil">
+    android:backgroundTint="#673AB7"
+    tools:context=".MainActivity">
 
-
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Mes réservations"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/image1"
         android:layout_width="40dp"
         android:layout_height="26dp"
         android:layout_marginStart="44dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView1"
+        android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar"
         app:srcCompat="@drawable/add_circle" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="32dp"
         android:text="Catégories"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/image1"
-        app:layout_constraintTop_toBottomOf="@id/searchView1"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <TextView
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="155dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="0dp"
         android:background="#007FFF"
-        />
-    <TextView
-        android:id="@+id/titre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/white"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="85dp"
-        android:text="Bienvenue"
-        android:textSize="50dp"
-
-        />
-
-    <SearchView
-        android:id="@+id/searchView1"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="45dp"
-        android:background="#ffff"
-        android:queryHint="Restaurant,Ville,Adresse..."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/horaire_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="65dp"
+        android:text="Bienvenue"
+        android:textColor="@color/white"
+        android:textSize="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
+
+    <Button
+        android:id="@+id/reservation_button"
+        android:layout_width="219dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="107dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#673AB7"
+        android:text="Mes réservations"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/searchBar"
+        android:layout_width="288dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="35dp"
+        android:hint="Restaurant, ville, adresse ..."
+        android:textColorHint="#2B2828"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:inputType="text"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="33dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:srcCompat="@drawable/ic_search" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
