--- a/AndroidProject/app/src/main/res/layout/acceuil_plus_option.xml
+++ b/AndroidProject/app/src/main/res/layout/acceuil_plus_option.xml
@@ -6,40 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".AcceuilPlusOption">
 
-    <Button
-        android:id="@+id/btn1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Mes réservations"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/image2"
         android:layout_width="40dp"
         android:layout_height="26dp"
         android:layout_marginStart="44dp"
-        app:layout_constraintTop_toBottomOf="@id/searchView1"
+        android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar"
         app:srcCompat="@drawable/minus_circle" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="240dp"
-        android:layout_marginBottom="428dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="32dp"
         android:text="Catégories"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/searchView1"
-        android:layout_marginTop="35dp"
         app:layout_constraintStart_toEndOf="@+id/image2"
-        android:layout_marginStart="10dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <TextView
         android:id="@+id/toolbar2"
@@ -62,19 +49,28 @@
         android:layout_marginStart="85dp"
         android:text="Bienvenue"
         android:textSize="50dp"
-
         />
 
-    <SearchView
-        android:id="@+id/searchView1"
-        android:layout_width="300dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="45dp"
-        android:background="#ffff"
-        android:queryHint="Restaurant,Ville,Adresse..."
-        app:layout_constraintEnd_toEndOf="parent"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/searchBar"
+        android:layout_width="288dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="35dp"
+        android:hint="Restaurant, ville, adresse ..."
+        android:inputType="text"
+        android:textColorHint="#2B2828"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="33dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar2" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
+        app:srcCompat="@drawable/ic_search" />
 
     <CheckBox
         android:id="@+id/checkBox1"
@@ -112,12 +108,11 @@
         android:id="@+id/checkBox4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginEnd="60dp"
         android:text="Français"
-        app:layout_constraintTop_toBottomOf="@id/searchView1"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="60dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
 
     <CheckBox
         android:id="@+id/checkBox5"
@@ -130,6 +125,21 @@
         android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
+    <Button
+        android:id="@+id/reservation_button"
+        android:layout_width="219dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="107dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#673AB7"
+        android:text="Mes réservations"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
