--- a/AndroidProject/app/src/main/res/layout/information_resto.xml
+++ b/AndroidProject/app/src/main/res/layout/information_resto.xml
@@ -12,20 +12,11 @@
     app:layout_constraintBottom_toBottomOf="parent"
     android:layout_marginBottom="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/background_dark"
+    android:background="@color/white"
     >
 
 
-    <TextView
-        android:id="@+id/infoResto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/white"/>
-        <!--android:layout_marginStart="20dp"
+    <!--android:layout_marginStart="20dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="55dp"
@@ -37,23 +28,33 @@
         app:layout_constraintVertical_bias="0.0" -->
 
     <TextView
+        android:id="@+id/infoResto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
         android:id="@+id/titreResto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
         android:text="Luigi Pasta"
+        android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="@id/infoResto"
-        android:layout_marginTop="45dp"
-        app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="130dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageResto"
+        app:layout_constraintTop_toTopOf="@id/infoResto" />
 
     <ImageView
         android:id="@+id/imageResto"
         android:layout_width="99dp"
         android:layout_height="66dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="45dp"
         android:src="@drawable/ic_baseline_image_categorie"
         app:layout_constraintStart_toStartOf="@id/infoResto"
@@ -63,115 +64,114 @@
         android:id="@+id/deletePopupCategorie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
         android:src="@android:drawable/btn_dialog"
-        app:layout_constraintTop_toTopOf="@id/infoResto"
-        app:layout_constraintEnd_toEndOf="@id/infoResto"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/adresseResto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="25dp"
         android:text="Adresse :"
-        android:textSize="20dp"
         android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/imageResto"
-        android:layout_marginTop="25dp"/>
+        app:layout_constraintTop_toBottomOf="@id/imageResto" />
 
     <TextView
         android:id="@+id/rueResto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:text="1234 avenue de la pizza"
-        android:textSize="20dp"
         android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/adresseResto"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintTop_toBottomOf="@id/adresseResto" />
 
     <TextView
         android:id="@+id/noTel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
         android:text="Telephone"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/rueResto"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintTop_toBottomOf="@id/rueResto" />
 
     <TextView
         android:id="@+id/telephone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:text="514-111-111"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/noTel"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintTop_toBottomOf="@id/noTel" />
 
     <TextView
         android:id="@+id/siteWeb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
         android:text="Site internet"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/telephone"
-        android:layout_marginTop="20dp"  />
+        app:layout_constraintTop_toBottomOf="@id/telephone" />
 
     <TextView
         android:id="@+id/lienWeb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:autoLink="web"
         android:text="www.alphonsopizzeria.com"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/siteWeb"
-        android:layout_marginTop="10dp"
-        android:autoLink="web"/>
+        app:layout_constraintTop_toBottomOf="@id/siteWeb" />
 
     <TextView
         android:id="@+id/adresseCourriel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
         android:text="Adresse Courriel"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/lienWeb"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintTop_toBottomOf="@id/lienWeb" />
 
     <TextView
         android:id="@+id/mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:autoLink="email"
         android:text="alphonsopizzeria@mail.com"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@id/infoResto"
-        android:layout_marginStart="45dp"
-        app:layout_constraintTop_toBottomOf="@id/adresseCourriel"
-        android:layout_marginTop="10dp"
-        android:autoLink="email"/>
+        app:layout_constraintTop_toBottomOf="@id/adresseCourriel" />
 
     <Button
         android:id="@+id/buttonMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/marineBlue"
         android:backgroundTintMode="src_in"
@@ -185,7 +185,7 @@
         android:id="@+id/buttonHoraires"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/marineBlue"
         android:backgroundTintMode="src_in"
@@ -196,10 +196,10 @@
 
     <Button
         android:id="@+id/buttonReserver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="132dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#673AB7"
         android:backgroundTintMode="src_in"
         android:text="Reserver"
@@ -211,22 +211,40 @@
         android:id="@+id/direction"
         android:layout_width="55dp"
         android:layout_height="46dp"
+        android:layout_marginTop="115dp"
+        android:layout_marginEnd="35dp"
         android:src="@drawable/ic_route"
-        app:layout_constraintStart_toEndOf="@id/adresseResto"
-        app:layout_constraintTop_toTopOf="@id/infoResto"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="135dp"
-        tools:layout_editor_absoluteX="279dp"
-        tools:layout_editor_absoluteY="234dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/infoResto" />
 
     <ImageView
         android:id="@+id/tlf"
         android:layout_width="57dp"
         android:layout_height="44dp"
-        android:layout_marginStart="105dp"
         android:layout_marginTop="65dp"
+        android:layout_marginEnd="35dp"
         android:src="@drawable/ic_tlf"
-        app:layout_constraintStart_toEndOf="@id/telephone"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/direction" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="11dp"
+        app:layout_constraintEnd_toStartOf="@+id/buttonHoraires"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:srcCompat="@drawable/ic_clock" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="33dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/buttonMenu"
+        app:layout_constraintTop_toBottomOf="@+id/mail"
+        app:srcCompat="@drawable/ic_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
