--- a/AndroidProject/app/src/main/res/layout/mes_reservations.xml
+++ b/AndroidProject/app/src/main/res/layout/mes_reservations.xml
@@ -25,9 +25,9 @@
         android:id="@+id/hautPage"
         android:layout_width="match_parent"
         android:layout_height="155dp"
-        android:layout_marginTop="0dp"
         android:background="#652CB3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -276,6 +276,16 @@
         android:text="01/28 : Carambo (12:45)"
         android:textColor="#000000"
         android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backToMain"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
