--- a/AndroidProject/app/src/main/res/layout/reservation_confirmee.xml
+++ b/AndroidProject/app/src/main/res/layout/reservation_confirmee.xml
@@ -213,4 +213,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nbPersoConfirm" />
 
+    <Button
+        android:id="@+id/backToReservation"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
