--- a/AndroidProject/app/src/main/res/layout/page_reservation.xml
+++ b/AndroidProject/app/src/main/res/layout/page_reservation.xml
@@ -372,4 +372,14 @@
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
         app:layout_constraintTop_toBottomOf="@+id/nbPersReserv" />
+
+    <Button
+        android:id="@+id/backToCategories"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
